# diana-alexa-clone

./: README.md  base.py  infer.py  nlu.py  nlu_predict.py  pyproject.toml  requirements.txt  rules.aiml
aiml/: rules_post.aiml  std.aiml
data/: facts.csv  jokes.csv  reminders.csv
parse/: parse_utils.py
utils/: tokenizer.pkl
