[tool.poetry]
name = "diana-alexa-clone"
version = "0.2.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
spotipy = "^2.23.0"
wikipedia = "^1.4.0"
pyttsx3 = "^2.90"
aiml = "^0.9.2"
pyaudio = "^0.2.13"
pydictionary = "^2.0.1"
holidays = "^0.35"
speechrecognition = "^3.10.0"
tensorflow = ">=2.10.0, <=2.14.0"
tensorflow-intel = ">=2.10.0, <=2.14.0"
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
keras = ">=2.13.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
